--- a/educate.html
+++ b/educate.html
@@ -131,6 +131,13 @@
             border-radius: 15px;         
             box-shadow: 0 6px 15px rgba(0,0,0,0.25); 
         }
+       .imagen-img {
+    width: 100%;
+    max-width: 600px; /* límite opcional para pantallas grandes */
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
 </style>
 </head>
 <body>
@@ -315,15 +322,10 @@
         </ul>
      </section>
      
-     <img src="img/trella.png" alt="Imagen"
-     class="imagen-img"
-     style="width:380px; height:auto; display:block; margin:0 auto;">
-     <img src="img/comic1.jpg" alt="Imagen"
-     class="imagen-img"
-     style="width:580px; height:auto; display:block; margin:0 auto;">
-     <img src="img/comic2.jpg" alt="Imagen"
-     class="imagen-img"
-     style="width:580px; height:auto; display:block; margin:0 auto;">
+    <img src="img/trella.png" alt="Imagen" class="imagen-img">
+    <img src="img/comic1.jpg" alt="Imagen" class="imagen-img">
+    <img src="img/comic2.jpg" alt="Imagen" class="imagen-img">
+
       
     </div>
   </div>
@@ -352,4 +354,5 @@
 
  </body>
  </html>
+
 
