--- a/educate.html
+++ b/educate.html
@@ -316,9 +316,15 @@
         </ul>
      </section>
      
-    <img src="img/trella.png" alt="Imagen" class="imagen-estilo">
-    <img src="img/comic1.jpg" alt="Imagen" class="imagen-estilo">
-    <img src="img/comic2.jpg" alt="Imagen" class="imagen-estilo">
+    <img src="img/trella.png" alt="Imagen"
+style="max-width:100%; width:100%; height:auto; display:block; margin:0 auto;">
+
+<img src="img/comic1.jpg" alt="Imagen"
+style="max-width:100%; width:100%; height:auto; display:block; margin:0 auto;">
+
+<img src="img/comic2.jpg" alt="Imagen"
+style="max-width:100%; width:100%; height:auto; display:block; margin:0 auto;">
+
 
       
     </div>
@@ -348,6 +354,7 @@
 
  </body>
  </html>
+
 
 
 
